--- a/Financial analysis among different generations.ipynb
+++ b/Financial analysis among different generations.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##  Analysis finiancial differences between age groups \n",
+    "##  Income earning differences among different generation \n",
     "\n",
     "[Work Experience and Income data from Data Source from U.S. Census Bureau](https://www.census.gov/data/datasets/time-series/demo/cps/cps-asec.html)\n",
     "\n",
